src/objects/BillNPay__Text2PayBatchProcessLog__c.object
<CustomObject>
    <description>Used by Bill &amp; Pay to log errors that occur in its processing.  Used by Admins for troubleshooting</description>
    <fields>
        <fullName>BillNPay__ErrorCode__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__ErrorMsg__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillNPay__ErrorType__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Process_Name__c</fullName>
        <inlineHelpText>Name of process that triggered this error</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__ReferenceRecordId__c</fullName>
        <inlineHelpText>Click link to open record that triggered this error</inlineHelpText>
        <label>Link to Record</label>
        <type>Url</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>BillNPay__ReferenceRecordId__c</columns>
        <columns>BillNPay__ErrorMsg__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>